...
            locations={[0.1, 0.3, 0.5, 0.7, 1.0]}
            style={styles.linearGradient}>
            <Image
              style={styles.friendThemLoginIcon}
              source={require('../Images/logo-friendthem-text.png')}/>
            <Text style={styles.loginFormText}>
              LOG IN
            </Text>
            <TextInput
              testID={'email_input'}
              style={styles.formInput}
              onChangeText={(textValue) => this.updateState(textValue, 'userEmail')}
              placeholder='Email Address'
              autoCapitalize={'none'}
              autoCorrect={false}
              autoFocus={true}
              underlineColorAndroid='rgba(0,0,0,0)'
              placeholderFontColor='#85919a'>
            </TextInput>
            <TextInput
              testID={'password_input'}
              style={styles.formInput}
              onChangeText={(textValue) => this.updateState(textValue, 'userPassword')}
              secureTextEntry={true}
              autoCorrect={false}
              underlineColorAndroid='rgba(0,0,0,0)'
              placeholder='Password'
...
              uncheckedColor='#fff'
              checkedIcon='check-square'
              checkedColor='#fff'
              onIconPress={() => this.setState({checkBoxChecked: !this.state.checkBoxChecked})}
              checked={this.state.checkBoxChecked}/>
            <TouchableOpacity
              testID={'start_button'}
              style={[styles.loginButtonStyle, { marginTop: 20 }]}
              onPress={() => this.loginRequest()}>
              <Text style={styles.buttonText}>START</Text>
              <Icon
                name='arrow-right'
                type='feather'
...
