...
            animationOut="slideOutDown"
            onBackdropPress={this.toggleTNCModal}
            isVisible={termsVisible}
          >
            <View style={{ flex: 1 }}>
              <ScrollView
                testID='terms-and-conditions'
                contentContainerStyle={styles.containerModal}>
                <Text style={{ fontSize: 6 }}>
                  {TERMS_AND_CONDITIONS}
                </Text>
              </ScrollView>
            </View>
...
              style={styles.rightArrow}
            />
          </TouchableOpacity>
          <TouchableOpacity
            style={styles.sectionItem}
            onPress={this.toggleTNCModal}
            testID='terms-and-conditions-button'
            >
            <Image
              source={Images.file}
              />
            <Text style={styles.sectionItemText}>
              Terms and Conditions
...
