...
  }

  determineTitle = () => {
    const { permissionType } = this.props

    return permissionType === 'geolocation' ?
    'WE WOULD LIKE TO ACCESS YOUR LOCATION' :
    'WE WOULD ALSO LIKE TO SEND YOU NOTIFICATIONS'
  }

  determineImage = () => {
    const { permissionType } = this.props

    return permissionType === 'geolocation' ?
...
                 testID={'connect_button_not_now'}
                 title="NOT NOW"
                 containerStyle={styles.button}
                 textStyle={styles.buttonTextStyle}
                 onPressCallback={() => this.handleNotNow()}
               />
              <View testID={'connect_button_okay'}>
                <ConnectButton
                  title="OKAY!"
                  containerStyle={styles.button}
                  textStyle={styles.buttonTextStyle}
                  onPressCallback={() => this.handleOkay()}
                />
...
