...
                height={20}
                source={Images.Friendster}
              />
            <Text style={styles.modalText}>
              My name is Friendster and I'm here to help you get the most out of the app! Let's get you started by syncing up all your social media accounts.
            </Text>
            <Button title="CLOSE" onPress={triggerModal}/>
          </View>
      </Modal>
  )
}

